--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "spa-github-pages",
+  "name": "verkout-spa",
   "version": "5.1.0",
   "private": true,
-  "description": "Single Page Apps for GitHub Pages",
+  "description": "Verkout Single Page Apps for GitHub Pages",
   "scripts": {
     "start": "webpack-dev-server --devtool eval-source-map --history-api-fallback --open",
     "build": "webpack -p"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rafrex/spa-github-pages.git"
+    "url": "git+https://github.com/Verkout/verkout.github.io.git"
   },
-  "author": "Rafael Pedicini <code@rafrex.com>",
+  "author": "Brian Dainton <brian.dainton@verkout.com>",
   "license": "MIT",
   "dependencies": {
     "prop-types": "^15.6.0",
