--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-helmet": "^6.1.0",
     "react-interactive": "^0.8.1",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "video.js": "^7.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
