--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "https://verkout.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.verkout.com" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Verkout: the workouts of Instagram" # the name of your site, e.g. ACME Corp.
 
